--- a/source/assets/css/layout/_recipes.scss
+++ b/source/assets/css/layout/_recipes.scss
@@ -6,7 +6,6 @@
     box-sizing: border-box;
     margin: 0;
     padding: 5rem 3rem;
-    min-height: 20rem;
 
     @include breakpoint(tablet) {
       display: inline-block;
